syntax = "proto3";

package proto;
option go_package = "./;proto";

// CmdId: 269
// EnetChannelId: 0
// EnetIsReliable: true
message EnterSceneDoneRsp {
  int32 retcode = 9;
  uint32 enter_scene_token = 8;
}
