syntax = "proto3";

package proto;
option go_package = "./;proto";

import "SceneUnlockInfo.proto";

message SceneUnlockInfoNotify {
  repeated SceneUnlockInfo unlockInfos = 1;
}
