syntax = "proto3";

package proto;
option go_package = "./;proto";


message SetPlayerBornDataReq {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 198;
  }

  uint32 avatar_id = 3;
  string nick_name = 12;
}
