syntax = "proto3";

package proto;
option go_package = "./;proto";

import "OnlinePlayerInfo.proto";

message WorldPlayerInfoNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 3304;
  }

  repeated OnlinePlayerInfo player_info_list = 6;
  repeated uint32 player_uid_list = 5;
}
