syntax = "proto3";

package proto;
option go_package = "./;proto";

import "PlayerLocationInfo.proto";
import "PlayerWorldLocationInfo.proto";

message WorldPlayerLocationNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 283;
  }

  repeated PlayerLocationInfo player_loc_list = 6;
  repeated PlayerWorldLocationInfo player_world_loc_list = 15;
}
